# Copyright © 2021-2023 The Lookit Crate Developers
#
# Licensed under any of:
# - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
# - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# - MIT License (https://mit-license.org/)
# At your option (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).  This file may not be copied,
# modified, or distributed except according to those terms.

[package]
name = "lookit"
version = "0.1.1"
edition = "2021"
rust-version = "1.65"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Rust crate to asynchronously get device connection events."
repository = "https://github.com/ardaku/lookit"
documentation = "https://docs.rs/lookit"
homepage = "https://github.com/ardaku/lookit/blob/main/CHANGELOG.md"
include = ["Cargo.toml", "src/*"]
categories = ["asynchronous", "hardware-support", "multimedia", "os"]
keywords = ["async", "cross-platform", "device"]
readme = "README.md"

[[example]]
name = "hello"
required-features = ["epoll"]

[dependencies.pasts]
version = "0.13"

# Use Smelling Salts on Linux
[target.'cfg(target_os="linux")'.dependencies.smelling_salts]
version = "0.10"
features = ["epoll"]

[dev-dependencies.async_main]
version = "0.2"
features = ["pasts"]

# [patch.crates-io]
# pasts = { path = "../pasts" }
