[package]
name = "lookit"
version = "0.1.1"
edition = "2021"
rust-version = "1.66"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Asynchronously connect to devices"
repository = "https://github.com/ardaku/lookit"
documentation = "https://docs.rs/lookit"
homepage = "https://github.com/ardaku/lookit/blob/main/CHANGELOG.md"
include = ["Cargo.toml", "src/*"]
categories = ["asynchronous", "hardware-support", "multimedia", "os"]
keywords = ["async", "cross-platform", "device"]
readme = "README.md"

[dependencies.pasts]
version = "0.13"

[dependencies.smelling_salts]
version = "0.11"

[dev-dependencies.async_main]
version = "0.2"
features = ["pasts"]

# [patch.crates-io]
